syntax = "proto3";

package grpc;

// protoc --go_out=plugins=grpc:./../internal/grpc api.proto


message None {}

message AuthRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message IPRequest {
    string ip = 1;
}

message BucketRequest {
    string login = 1;
    string password = 2;
    string ip = 3;
}

message OkResponse {
    bool ok = 1;
}

service Api {
    rpc AddInBlackList (IPRequest)      returns (None) {};
    rpc AddInWhiteList (IPRequest)      returns (None) {};
    rpc DeleteFromBlackList (IPRequest) returns (None) {};
    rpc DeleteFromWhiteList (IPRequest) returns (None) {};
    rpc ClearBucket(BucketRequest)      returns (None) {};
    rpc Auth(AuthRequest)               returns (OkResponse) {};
}